backend/k8s/intelligence-fn-rs.knative.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: intelligence-fn-rs
  namespace: evaluation-system
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/minScale: "1"
        autoscaling.knative.dev/maxScale: "10"
    spec:
      containers:
        - image: registry.burrito.deway.fr/burrito-intelligence-fn-rs:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          envFrom:
            - configMapRef:
                name: burrito-config
            - secretRef:
                name: burrito-secrets
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
